updated prefixes with new remover